--- a/app/src/main/res/layout/list_element.xml
+++ b/app/src/main/res/layout/list_element.xml
@@ -1,41 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <ImageView
-        android:id="@+id/icon"
-        android:layout_width="48dp"
-        android:layout_height="59dp"
-        android:layout_marginTop="10dp"
-        android:src="@drawable/p2j" />
+    <!--<data>-->
+
+        <!--<variable-->
+            <!--name="listElementDto"-->
+            <!--type="p2j.evolv.com.p2j_v2.model.ListElementDto" />-->
+    <!--</data>-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/file_name"
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:paddingLeft="25dp"
-            android:paddingRight="5dp"
-            android:paddingTop="15dp"
-            android:text="Medium Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="48dp"
+            android:layout_height="59dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/p2j" />
 
-        <TextView
-            android:id="@+id/file_details"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingBottom="5dp"
-            android:paddingLeft="25dp"
-            android:paddingTop="5dp"
-            android:text="Details Text"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textSize="10sp" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/file_name"
+                android:layout_width="match_parent"
+                android:layout_height="45dp"
+                android:paddingLeft="25dp"
+                android:paddingRight="5dp"
+                android:paddingTop="15dp"
+                android:text="FileName"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="15sp" />
+
+            <TextView
+                android:id="@+id/file_details"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:paddingLeft="25dp"
+                android:paddingTop="5dp"
+                android:text="0"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="10sp" />
+        </LinearLayout>
     </LinearLayout>
-</LinearLayout>
+</layout>
