--- a/app/src/main/res/layout/p2j_list_fragment.xml
+++ b/app/src/main/res/layout/p2j_list_fragment.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
+    <!--<data>-->
 
-        <variable
-            name="myViewModel"
-            type="p2j.evolv.com.p2j_v2.model.MyViewModel" />
-    </data>
+    <!--<variable-->
+    <!--name="myViewModel"-->
+    <!--type="p2j.evolv.com.p2j_v2.model.MyViewModel" />-->
+    <!--</data>-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +17,6 @@
             android:id="@+id/list_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:entries="@color/colorPrimary"
-            app:itemBinding="@{myViewModel.itemBinding}"
-            app:items="@{myViewModel.items}" />
+            android:entries="@color/colorPrimary" />
     </LinearLayout>
 </layout>
